AG-1157 добавлены модели и viewmodel моделей

--- a/app/src/main/res/layout/quest_html_banner.xml
+++ b/app/src/main/res/layout/quest_html_banner.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/quest_container">
+<layout>
 
-    <include layout="@layout/layout_back" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/quest_container">
 
-    <RelativeLayout
-        android:id="@+id/front"
-        style="@style/root"
-        android:tag="front">
+        <include layout="@layout/layout_back" />
 
-        <WebView
-            android:id="@+id/webView"
+        <RelativeLayout
+            android:id="@+id/front"
             style="@style/root"
-            android:layout_gravity="center_vertical" />
+            android:tag="front">
+
+            <WebView
+                android:id="@+id/webView"
+                style="@style/root"
+                android:layout_gravity="center_vertical" />
+        </RelativeLayout>
     </RelativeLayout>
-</RelativeLayout>
+</layout>
