--- a/app/src/main/res/layout/quest_event.xml
+++ b/app/src/main/res/layout/quest_event.xml
@@ -1,35 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/quest_container">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.CardView style="@style/cardview">
+    <RelativeLayout
+        style="@style/quest_container">
 
-        <include layout="@layout/layout_back" />
+        <android.support.v7.widget.CardView style="@style/cardview">
 
-        <RelativeLayout
-            android:id="@+id/front"
-            style="@style/root"
-            android:background="@drawable/quest_background_pink"
-            android:gravity="center"
-            android:tag="front">
+            <include layout="@layout/layout_back" />
 
-            <include
-                android:id="@+id/rrPrice"
-                layout="@layout/quest_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
+            <RelativeLayout
+                android:id="@+id/front"
+                style="@style/root"
+                android:background="@drawable/quest_background_pink"
+                android:gravity="center"
+                android:tag="front">
 
-            <TextView
-                android:id="@+id/title"
-                style="@style/quest_title"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_vertical"
-                android:layout_toLeftOf="@id/rrPrice"
-                android:drawableLeft="@drawable/image_icon_category_pin"
-                android:drawablePadding="@dimen/pd_xxsmall" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+                <include
+                    android:id="@+id/rrPrice"
+                    layout="@layout/quest_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+
+                <TextView
+                    android:id="@+id/title"
+                    style="@style/quest_title"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_toLeftOf="@id/rrPrice"
+                    android:drawableLeft="@drawable/image_icon_category_pin"
+                    android:drawablePadding="@dimen/pd_xxsmall" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+</layout>
