--- a/app/src/main/res/layout/quest_news.xml
+++ b/app/src/main/res/layout/quest_news.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/quest_container">
+<layout>
 
-    <android.support.v7.widget.CardView style="@style/cardview">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/quest_container">
 
-        <include layout="@layout/layout_back" />
+        <android.support.v7.widget.CardView style="@style/cardview">
 
-        <LinearLayout
-            android:id="@+id/front"
-            style="@style/root"
-            android:layout_centerVertical="true"
-            android:background="@drawable/back_ag"
-            android:padding="@dimen/pd_xsmall"
-            android:tag="front">
+            <include layout="@layout/layout_back" />
 
-            <TextView
-                android:id="@+id/title"
-                style="@style/quest_title"
-                android:layout_gravity="center_vertical"
-                android:drawableLeft="@drawable/image_icon_category_news_green"
-                android:drawablePadding="@dimen/pd_xxsmall"
-                android:textColor="@color/green_light" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+            <LinearLayout
+                android:id="@+id/front"
+                style="@style/root"
+                android:layout_centerVertical="true"
+                android:background="@drawable/back_ag"
+                android:padding="@dimen/pd_xsmall"
+                android:tag="front">
+
+                <TextView
+                    android:id="@+id/title"
+                    style="@style/quest_title"
+                    android:layout_gravity="center_vertical"
+                    android:drawableLeft="@drawable/image_icon_category_news_green"
+                    android:drawablePadding="@dimen/pd_xxsmall"
+                    android:textColor="@color/green_light" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+</layout>
