--- a/app/src/main/res/layout/quest_novelty.xml
+++ b/app/src/main/res/layout/quest_novelty.xml
@@ -1,43 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/quest_container">
+<layout>
 
-    <android.support.v7.widget.CardView style="@style/cardview">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/quest_container">
 
-        <include layout="@layout/layout_back" />
+        <android.support.v7.widget.CardView style="@style/cardview">
 
-        <RelativeLayout
-            android:id="@+id/front"
-            style="@style/root"
-            android:background="@drawable/quest_background_pink"
-            android:gravity="center"
-            android:tag="front">
+            <include layout="@layout/layout_back" />
 
-            <ImageView
-                android:id="@+id/markerSpecial"
-                android:layout_toLeftOf="@+id/rrPrice"
-                style="@style/wrap"
-                android:layout_centerVertical="true"
-                android:paddingLeft="@dimen/pd_xxsmall"
-                android:paddingRight="@dimen/pd_xxsmall"
-                android:src="@drawable/icon02"
-                android:visibility="gone" />
+            <RelativeLayout
+                android:id="@+id/front"
+                style="@style/root"
+                android:background="@drawable/quest_background_pink"
+                android:gravity="center"
+                android:tag="front">
 
-            <include
-                layout="@layout/quest_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
+                <ImageView
+                    android:id="@+id/markerSpecial"
+                    style="@style/wrap"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/rrPrice"
+                    android:paddingLeft="@dimen/pd_xxsmall"
+                    android:paddingRight="@dimen/pd_xxsmall"
+                    android:src="@drawable/icon02"
+                    android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/title"
-                style="@style/quest_title"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@id/markerSpecial"
-                android:drawableLeft="@drawable/icon02"
-                android:drawablePadding="@dimen/pd_xxsmall" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+                <include
+                    layout="@layout/quest_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+
+                <TextView
+                    android:id="@+id/title"
+                    style="@style/quest_title"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/markerSpecial"
+                    android:drawableLeft="@drawable/icon02"
+                    android:drawablePadding="@dimen/pd_xxsmall" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+</layout>
