--- a/app/src/main/res/layout/quest_profile.xml
+++ b/app/src/main/res/layout/quest_profile.xml
@@ -1,56 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/quest_container">
+<layout>
 
-    <android.support.v7.widget.CardView style="@style/cardview">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/quest_container">
 
-        <include layout="@layout/layout_back" />
+        <android.support.v7.widget.CardView style="@style/cardview">
 
-        <RelativeLayout
-            android:id="@+id/front"
-            style="@style/root"
-            android:background="@drawable/quest_background_sky"
-            android:gravity="center|left"
-            android:tag="front">
+            <include layout="@layout/layout_back" />
 
-            <ImageView
-                android:id="@+id/icon"
-                style="@style/wrap"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:padding="5dp"
-                android:src="@drawable/image_icon_category_profile" />
+            <RelativeLayout
+                android:id="@+id/front"
+                style="@style/root"
+                android:background="@drawable/quest_background_sky"
+                android:gravity="center|left"
+                android:tag="front">
 
-            <include
-                android:id="@+id/contprice"
-                android:visibility="gone"
-                layout="@layout/quest_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" />
+                <ImageView
+                    android:id="@+id/icon"
+                    style="@style/wrap"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:padding="5dp"
+                    android:src="@drawable/image_icon_category_profile" />
 
-            <!--android:layout_toLeftOf="@id/contprice"-->
-            <LinearLayout
-                style="@style/item.linear"
-                android:layout_gravity="center_vertical"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/icon"
-                android:layout_weight="0.4">
+                <include
+                    android:id="@+id/contprice"
+                    layout="@layout/quest_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:visibility="gone" />
 
-                <TextView
-                    android:id="@+id/title"
+                <!--android:layout_toLeftOf="@id/contprice"-->
+                <LinearLayout
+                    style="@style/item.linear"
+                    android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
-                    style="@style/quest_title"
-                    android:text="Заполнить профиль" />
+                    android:layout_toRightOf="@id/icon"
+                    android:layout_weight="0.4">
 
-                <TextView
-                    android:id="@+id/details"
-                    android:layout_gravity="center_vertical"
-                    style="@style/quest_detail"
-                    android:text="Заполнить профиль" />
-            </LinearLayout>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+                    <TextView
+                        android:id="@+id/title"
+                        style="@style/quest_title"
+                        android:layout_gravity="center_vertical"
+                        android:text="Заполнить профиль" />
+
+                    <TextView
+                        android:id="@+id/details"
+                        style="@style/quest_detail"
+                        android:layout_gravity="center_vertical"
+                        android:text="Заполнить профиль" />
+                </LinearLayout>
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+</layout>
