--- a/app/src/main/res/drawable/ic_dislike_active.xml
+++ b/app/src/main/res/drawable/ic_dislike_active.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="@dimen/vs_small"
+    android:height="@dimen/vs_small"
     android:viewportHeight="198.4"
     android:viewportWidth="198.4">
     <group>
