--- a/app/src/main/res/layout/fragment_info_comment.xml
+++ b/app/src/main/res/layout/fragment_info_comment.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <LinearLayout
-        android:id="@+id/root"
+    <ScrollView
         style="@style/root"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:visibility="visible">
+        android:fillViewport="true">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/info_number_app_wrapper"
-            style="@style/text_input_layout">
+        <LinearLayout
+            android:id="@+id/root"
+            style="@style/root"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/pd_normal">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/info_number_app"
-                style="@style/edit_profile.input"
-                android:hint="Номер квартиры"
-                android:inputType="textCapSentences" />
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/info_number_app_wrapper"
+                style="@style/text_input_layout">
 
-        </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/info_number_app"
+                    style="@style/edit_profile.input"
+                    android:hint="Номер квартиры"
+                    android:inputType="numberDecimal" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/info_comment_wrapper"
-            style="@style/text_input_layout">
+            </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/info_comment"
-                style="@style/edit_profile.input"
-                android:hint="@string/comment"
-                android:inputType="textCapSentences" />
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/info_comment_wrapper"
+                style="@style/text_input_layout">
 
-        </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/info_comment"
+                    style="@style/edit_profile.input"
+                    android:hint="@string/comment"
+                    android:inputType="textMultiLine"
+                    android:scrollbars="vertical" />
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/info_comment_description"
-            style="@style/text.small.gray"
-            android:paddingLeft="@dimen/pd_xxsmall"
-            android:paddingTop="@dimen/pd_xxsmall"
-            android:text="Ваш комментарий будет виден только инициатору голосования." />
-    </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/info_comment_description"
+                style="@style/text.small.gray"
+                android:paddingLeft="@dimen/pd_xxsmall"
+                android:paddingTop="@dimen/pd_xxsmall"
+                android:text="Ваш комментарий будет виден только инициатору голосования." />
+        </LinearLayout>
+    </ScrollView>
 </layout>
