--- a/app/src/main/res/layout/fragment_info_survey.xml
+++ b/app/src/main/res/layout/fragment_info_survey.xml
@@ -41,7 +41,7 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/info_survey_comment_card"
-                    style="@style/wrap"
+                    style="@style/linear"
                     android:layout_below="@+id/info_survey_description"
                     android:elevation="@dimen/pd_xsmall">
 
@@ -50,8 +50,7 @@
                         style="@style/text.normal.black"
                         android:layout_margin="@dimen/pd_normal"
                         android:hint="Ваш комментарий"
-                        android:singleLine="true"
-                        android:text="Ваш комментарий: фывфывфв фвфы фывф ывфывфывфыв" />
+                        android:singleLine="true" />
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.GridLayout
@@ -106,8 +105,8 @@
                         android:id="@+id/like_count"
                         style="@style/text.large.green"
                         android:gravity="center"
-                        android:text="71"
                         android:textSize="@dimen/ts_xxlarge"
+                        android:visibility="gone"
                         app:layout_columnWeight="1"
                         app:layout_gravity="center"
                         app:layout_rowWeight="1" />
@@ -116,9 +115,9 @@
                         android:id="@+id/dislike_count"
                         style="@style/text.large.green"
                         android:gravity="center"
-                        android:text="3"
                         android:textColor="@color/red"
                         android:textSize="@dimen/ts_xxlarge"
+                        android:visibility="gone"
                         app:layout_columnWeight="1"
                         app:layout_gravity="center"
                         app:layout_rowWeight="1" />
@@ -132,9 +131,9 @@
             android:layout_height="@dimen/vs_xxsmall"
             android:layout_alignParentBottom="true"
             android:background="@drawable/poll_navigation_green_selector"
+            android:enabled="false"
             android:gravity="center"
             android:text="@string/share"
-            android:enabled="true"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="@dimen/ts_normal"
