--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -111,4 +111,6 @@
     <color name="tutorial_description">#96a5ab</color>
 
     <color name="fab_house_polls_add_color">#da4336</color>
+    <color name="tab_unselected">#9bdcd6</color>
+    <color name="dislike_color">#E74C3C</color>
 </resources>
