--- a/app/src/main/res/layout/fragment_house_address.xml
+++ b/app/src/main/res/layout/fragment_house_address.xml
@@ -3,8 +3,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/root"
-        style="@style/root"
-        android:background="@color/gray_shadow">
+        style="@style/root">
 
         <RelativeLayout style="@style/root">
 
@@ -12,7 +11,9 @@
                 android:id="@android:id/empty"
                 style="@style/emptylist_without_picture"
                 android:layout_below="@+id/list"
-                android:layout_marginTop="@dimen/pd_xxxlarge"
+                android:textSize="@dimen/ts_normal"
+                android:layout_marginTop="@dimen/pd_normal"
+                android:fontFamily="sans-serif-light"
                 android:text="@string/below_house_addresses_hint"
                 android:textColor="@color/gray_light" />
 
