--- a/app/src/main/res/layout/fragment_info_survey.xml
+++ b/app/src/main/res/layout/fragment_info_survey.xml
@@ -17,13 +17,14 @@
 
             <RelativeLayout
                 android:id="@+id/root"
-                style="@style/root">
+                style="@style/root"
+                android:layout_marginTop="@dimen/pd_normal">
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/info_survey_title"
                     style="@style/text.large.black"
                     android:paddingLeft="@dimen/pd_small"
-                    android:text="Приглашаем на субботник! (улюУхтомская 12 к.2)" />
+                    android:textStyle="bold" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/info_survey_description"
@@ -31,13 +32,7 @@
                     android:layout_below="@+id/info_survey_title"
                     android:paddingBottom="@dimen/pd_xxxsmall"
                     android:paddingLeft="@dimen/pd_small"
-                    android:paddingTop="@dimen/pd_xxxsmall"
-                    android:text="asdasdasdasdasdad asdasd asd asda s
-            d asd asd asdasd asd asd asd asd asd asd asd ad asd
-             asddfdfbisdbjnbjknstbnvbnsjkntbonbnsokbjtbinsbnnsfbskfnbk
-             sdfkg skbnstn skfng ksnthnsk flnf ksnrgl nsfgdnagkn dglkandfglk
-             nalnrglk andflk andrlkgn alkng laknglnfglkan rgn alkfdng alknrgl
-             nalgn akadng karkgn akdgn a;rng " />
+                    android:paddingTop="@dimen/pd_xxxsmall" />
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/info_survey_comment_card"
@@ -115,7 +110,7 @@
                         android:id="@+id/dislike_count"
                         style="@style/text.large.green"
                         android:gravity="center"
-                        android:textColor="@color/red"
+                        android:textColor="@color/dislike_color"
                         android:textSize="@dimen/ts_xxlarge"
                         android:visibility="gone"
                         app:layout_columnWeight="1"
