--- a/app/src/main/res/layout/fragment_poll.xml
+++ b/app/src/main/res/layout/fragment_poll.xml
@@ -21,9 +21,9 @@
             android:layout_gravity="top"
             app:tabGravity="fill"
             app:tabMaxWidth="0dp"
-            app:tabTextColor="@color/gray_lightest"
+            app:tabTextColor="@color/tab_unselected"
             app:tabSelectedTextColor="@color/white"
-            app:tabIndicatorColor="@color/white"
+            app:tabIndicatorColor="@color/yellow"
             app:tabBackground="@color/actionbar_background"
             app:tabMode="fixed"/>
 
