--- a/app/src/main/res/layout/fragment_house_address.xml
+++ b/app/src/main/res/layout/fragment_house_address.xml
@@ -4,23 +4,36 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/root"
         style="@style/root"
-        android:background="@color/gray_shadow">
+        android:background="@color/electronic_house_back_color">
 
         <RelativeLayout style="@style/root">
-
-            <TextView
-                android:id="@android:id/empty"
-                style="@style/emptylist_without_picture"
-                android:layout_below="@+id/list"
-                android:layout_marginTop="@dimen/pd_xxxlarge"
-                android:text="@string/below_house_addresses_hint"
-                android:textColor="@color/gray_light" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white" />
+
+            <TextView
+                android:id="@android:id/empty"
+                style="@style/emptylist_without_picture"
+                android:layout_below="@+id/list"
+                android:paddingBottom="16dp"
+                android:layout_marginTop="@dimen/pd_xlarge"
+                android:text="@string/below_house_addresses_hint"
+                android:textColor="@color/electronic_house_hint_color" />
+
+            <Button
+                android:id="@+id/profileButton"
+                style="@style/button.centered"
+                android:layout_below="@android:id/empty"
+                android:layout_centerHorizontal="true"
+                android:layout_centerInParent="false"
+                android:minWidth="250dp"
+                android:padding="@dimen/pd_xnormal"
+                android:layout_marginBottom="@dimen/pd_xlarge"
+                android:text="Перейти в профиль"
+                android:textSize="@dimen/ts_normal" />
 
             <View
                 android:id="@+id/shadow"
