--- a/app/src/main/res/layout/fragment_house_address.xml
+++ b/app/src/main/res/layout/fragment_house_address.xml
@@ -3,8 +3,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/root"
-        style="@style/root"
-        android:background="@color/electronic_house_back_color">
+        style="@style/root">
 
         <RelativeLayout style="@style/root">
 
@@ -12,16 +11,17 @@
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white" />
+                android:background="@color/white"/>
 
             <TextView
                 android:id="@android:id/empty"
                 style="@style/emptylist_without_picture"
                 android:layout_below="@+id/list"
-                android:paddingBottom="16dp"
-                android:layout_marginTop="@dimen/pd_xlarge"
+                android:layout_marginTop="@dimen/pd_normal"
+                android:fontFamily="sans-serif-light"
                 android:text="@string/below_house_addresses_hint"
-                android:textColor="@color/electronic_house_hint_color" />
+                android:textColor="@color/gray_light"
+                android:textSize="@dimen/ts_normal"/>
 
             <Button
                 android:id="@+id/profileButton"
@@ -29,18 +29,18 @@
                 android:layout_below="@android:id/empty"
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="false"
+                android:layout_marginBottom="@dimen/pd_xlarge"
                 android:minWidth="250dp"
                 android:padding="@dimen/pd_xnormal"
-                android:layout_marginBottom="@dimen/pd_xlarge"
                 android:text="Перейти в профиль"
-                android:textSize="@dimen/ts_normal" />
+                android:textSize="@dimen/ts_normal"/>
 
             <View
                 android:id="@+id/shadow"
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
                 android:layout_below="@+id/list"
-                android:background="@drawable/dropshadow" />
+                android:background="@drawable/dropshadow"/>
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 </layout>
