--- a/app/src/main/res/layout/fragment_house_poll.xml
+++ b/app/src/main/res/layout/fragment_house_poll.xml
@@ -19,7 +19,10 @@
                 style="@style/emptylist_without_picture"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="@dimen/pd_xxxlarge"
-                android:text="@string/empty_housepolls_hint" />
+                android:fontFamily="sans-serif-light"
+                android:text="@string/empty_housepolls_hint"
+                android:textColor="@color/gray_light"
+                android:textSize="@dimen/ts_normal" />
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/swipe"
