--- a/app/src/main/res/layout/item_sources_voting.xml
+++ b/app/src/main/res/layout/item_sources_voting.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/pd_normal"
+            android:layout_marginRight="@dimen/pd_xxsmall"
             android:visibility="@{viewModel.editable ? View.GONE : View.VISIBLE}"
             app:srcCompat="@drawable/ic_lock_4" />
 
