--- a/app/src/main/res/layout/fragment_info_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_info_tab_profile.xml
@@ -41,6 +41,7 @@
                     android:gravity="top">
 
                     <LinearLayout
+                        android:id="@+id/topContainer"
                         style="@style/item"
                         android:background="@color/actionbar_background"
                         android:orientation="vertical"
