--- a/app/src/main/res/layout/fragment_info_survey.xml
+++ b/app/src/main/res/layout/fragment_info_survey.xml
@@ -13,7 +13,23 @@
             android:layout_centerInParent="true"
             android:visibility="gone" />
 
-        <ScrollView style="@style/root">
+        <Button
+            android:id="@+id/shareButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/vs_xxsmall"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/poll_navigation_green_selector"
+            android:enabled="false"
+            android:gravity="center"
+            android:text="@string/share"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="@dimen/ts_normal"
+            android:visibility="visible" />
+
+        <ScrollView
+            style="@style/root"
+            android:layout_above="@+id/shareButton">
 
             <RelativeLayout
                 android:id="@+id/root"
@@ -30,14 +46,26 @@
                     android:id="@+id/info_survey_description"
                     style="@style/text.normal.black"
                     android:layout_below="@+id/info_survey_title"
-                    android:paddingBottom="@dimen/pd_xxxsmall"
                     android:paddingLeft="@dimen/pd_small"
                     android:paddingTop="@dimen/pd_xxxsmall" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/info_survey_more_description"
+                    style="@style/text.green"
+                    android:layout_below="@+id/info_survey_description"
+                    android:layout_centerHorizontal="true"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="@dimen/pd_normal"
+                    android:text="@string/title_more"
+                    android:textAllCaps="true"
+                    android:visibility="gone" />
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/info_survey_comment_card"
                     style="@style/linear"
-                    android:layout_below="@+id/info_survey_description"
+                    android:layout_below="@+id/info_survey_more_description"
                     android:elevation="@dimen/pd_xsmall">
 
                     <LinearLayout style="@style/linear">
@@ -45,14 +73,14 @@
                         <android.support.v7.widget.AppCompatTextView
                             android:id="@+id/info_survey_comment"
                             style="@style/text.normal.black"
-                            android:layout_margin="@dimen/pd_normal"
+                            android:layout_margin="@dimen/pd_xsmall"
                             android:hint="Ваш комментарий"
                             android:singleLine="true" />
 
                         <android.support.v7.widget.AppCompatTextView
                             android:id="@+id/info_survey_apartament_number"
                             style="@style/text.normal.black"
-                            android:layout_margin="@dimen/pd_normal"
+                            android:layout_margin="@dimen/pd_xsmall"
                             android:hint="@string/apartament_number"
                             android:singleLine="true" />
                     </LinearLayout>
@@ -63,6 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/info_survey_comment_card"
+                    android:paddingBottom="@dimen/vs_xsmall"
                     android:paddingTop="@dimen/pd_small"
                     app:columnCount="2"
                     app:orientation="horizontal"
@@ -129,20 +158,6 @@
                 </android.support.v7.widget.GridLayout>
             </RelativeLayout>
         </ScrollView>
-
-        <Button
-            android:id="@+id/shareButton"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/vs_xxsmall"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/poll_navigation_green_selector"
-            android:enabled="false"
-            android:gravity="center"
-            android:text="@string/share"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="@dimen/ts_normal"
-            android:visibility="visible" />
 
     </RelativeLayout>
 </layout>
