--- a/app/src/main/res/layout/item_active_poll.xml
+++ b/app/src/main/res/layout/item_active_poll.xml
@@ -22,6 +22,8 @@
 
         <TextView
             android:id="@+id/description"
+            android:text="@{viewModel.getDescriptionForActivePollDataBinding(context)}"
+            android:visibility="@{viewModel.getDescriptionVisibleForActivePollDataBinding}"
             style="@style/text.gray" />
 
         <TextView
