--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -60,5 +60,6 @@
     <dimen name="banner_top_pad">26dp</dimen>
     <dimen name="banner_right_pad">15dp</dimen>
     <dimen name="banner_pad">16dp</dimen>
+    <dimen name="banner_project_title_size">14sp</dimen>
 
 </resources>
